# gear

./: Cargo.toml  Makefile  search-index.js
.github/workflows/: CD.yml  CI-gear-loader-network.yml  CI.yaml  Purge.yml  Reset-gear-storage.yaml  Runtime-upgrade.yaml  build-node-fuzzer  build-node-fuzzer.yaml  restore-db-backup.yml  test-measurements.yaml  vara-reset-network.yml
.maintain/: frame-weight-template.hbs
ansible/: testnet-backup.yml  testnet-restore.yml
common/: Cargo.toml
common/codegen/: Cargo.toml
common/lazy-pages/: Cargo.toml
common/src/: lib.rs  native.rs  value_tree.rs
core/: Cargo.toml
core-backend/common/: Cargo.toml
core-backend/sandbox/: Cargo.toml
core-errors/src/: lib.rs
core-processor/: Cargo.toml
core-processor/src/: common.rs  executor.rs  ext.rs  handler.rs  lib.rs  processor.rs
core/src/: code.rs  env.rs  lib.rs  memory.rs  message.rs  program.rs
docker/: Dockerfile  Fuzzer-Dockerfile  Vara-Dockerfile
examples/: Cargo.toml
examples/create-program/: README.md
examples/inf_loop/: Cargo.toml  inf_loop.yaml
examples/light_sr25519/: Cargo.toml
gclient/: all.html  fn.wasm_target.html  struct.EventListener.html  struct.Node.html
gclient/src/: lib.rs
gclient/utils/: fn.bytes_now.html
gcore/: all.html  sidebar-items.js
gcore/error/: enum.ExtError.html  enum.MemoryError.html  index.html
gcore/exec/: fn.program_id.html  fn.random.html  fn.system_reserve_gas.html  fn.wait.html  fn.wait_for.html  fn.wait_up_to.html  fn.wake.html  fn.wake_delayed.html
gcore/ext/: index.html
gcore/msg/: fn.id.html  fn.read.html  fn.reply_commit_delayed.html  fn.reply_with_gas.html  fn.send_commit_delayed.html  fn.send_commit_with_gas_delayed.html  fn.send_from_reservation.html  fn.send_init.html  fn.send_input_delayed.html  sidebar-items.js
gcore/prog/: fn.create_program_with_gas.html  index.html
gcore/src/: exec.rs  msg.rs  prog.rs
gear-test/spec/: test_create_program.yaml
gear-test/src/: check.rs  manager.rs  sample.rs
gear_backend_common/: enum.ActorTerminationReason.html  struct.ExtInfo.html
gear_backend_common/lazy_pages/: trait.GlobalsAccessor.html
gear_backend_common/memory/: enum.ProcessAccessError.html  sidebar-items.js  struct.WasmMemoryWrite.html  trait.MemoryAccessRecorder.html
gear_backend_sandbox/: all.html  sidebar-items.js
gear_backend_sandbox/funcs/: index.html  type.SyscallOutput.html
gear_common/: index.html  macro.wrap_storage_double_map.html  sidebar-items.js
gear_common/event/: enum.DispatchStatus.html  enum.UserMessageReadSystemReason.html  type.MessageWaitedReason.html
gear_common/gas_provider/: sidebar-items.js  struct.PositiveImbalance.html  struct.TreeImpl.html
gear_common/storage/: struct.DequeueDrainIter.html  struct.GetThirdPos.html  struct.TogglerImpl.html  trait.Counter.html  trait.Dequeue.html  trait.DequeueError.html  trait.GetCallback.html  trait.Toggler.html  trait.ValueStorage.html
gear_core/buffer/: struct.RuntimeBufferSizeError.html
gear_core/code/: struct.InstrumentedCodeAndId.html
gear_core/costs/: struct.RuntimeToken.html
gear_core/gas/: enum.ChargeResult.html  struct.GasLeft.html
gear_core/ids/: struct.ReservationId.html
gear_core/memory/: constant.PAGE_STORAGE_GRANULARITY.html  enum.AllocError.html  index.html  struct.AllocationsContext.html  struct.PageBuf.html  struct.PagesIterInclusive.html  trait.PageU32Size.html
gear_core/message/: constant.MAX_PAYLOAD_SIZE.html  enum.MessageDetails.html  enum.MessageWaitedType.html  index.html  sidebar-items.js  struct.InitPacket.html  struct.MessageContext.html
gear_core/reservation/: struct.GasReservationSlot.html
gear_core_errors/: enum.MessageError.html  enum.ReservationError.html  sidebar-items.js
gear_core_errors/simple/: enum.SimpleReplyError.html
gear_core_processor/: fn.handle_journal.html  fn.precharge_for_code_length.html
gear_core_processor/common/: enum.DispatchOutcome.html  enum.SystemExecutionError.html
gear_core_processor/configs/: struct.BlockInfo.html
gear_core_processor/executor/: enum.ActorPrepareMemoryError.html
gear_core_processor/precharge/: fn.calculate_gas_for_code.html  fn.calculate_gas_for_non_subsequent_execution.html
gear_lazy_pages/: enum.InitError.html  enum.LazyPagesVersion.html
gsdk/: struct.PairSigner.html
gsdk/config/: sidebar-items.js
gsdk/events/: index.html
gsdk/result/: type.Result.html
gsdk/signer/: index.html
gsdk/types/: enum.Program.html  sidebar-items.js  type.GearPages.html
gstd/: attr.async_init.html  index.html  macro.bail.html
gstd/errors/: enum.ContractError.html  enum.SimpleSignalError.html  sidebar-items.js  type.Result.html
gstd/exec/: fn.block_timestamp.html  fn.exit.html  fn.value_available.html
gstd/ext/: fn.panic.html
gstd/msg/: fn.load_bytes.html  fn.reply_bytes_with_gas_delayed.html  fn.reply_commit.html  fn.reply_commit_delayed.html  fn.reply_commit_with_gas.html  fn.reply_delayed.html  fn.reply_for_reply.html  fn.reply_from_reservation_for_reply.html  fn.reply_input_for_reply.html  fn.send_commit.html  fn.send_commit_delayed.html  fn.send_from_reservation_for_reply_as.html  fn.send_input_for_reply_as.html  fn.send_push_input.html  sidebar-items.js
gstd/prelude/: derive.TypeInfo.html  (+13 more)
gtest/: Cargo.toml  constant.EXISTENTIAL_DEPOSIT.html  constant.INITIAL_RANDOM_SEED.html  constant.MAX_RESERVATIONS.html  constant.WAITLIST_COST.html  struct.Gas.html  struct.Program.html
gtest-ng/: Cargo.toml
lazy-pages/: Cargo.toml
node/cli/: Cargo.toml
node/cli/src/: benchmarking.rs  cli.rs  command.rs
node/service/: Cargo.toml
node/service/src/: authorship.rs  lib.rs
node/service/src/chain_spec/: vara.rs
pallet_gear_gas/: all.html
pallet_gear_rpc/: struct.Gear.html  trait.GearRuntimeApi.html
pallet_gear_scheduler/: all.html
pr-2183/: search-index.js
pr-2290/: help.html  settings.html  source-files.js
pr-2305/: help.html  index.html  search-index.js  settings.html
pr-2329/: crates.js  index.html
pr-2331/: search-index.js
program/: build.rs
runtime-interface/: Cargo.toml
scripts/: gear.sh
(+2077 files in other folders)
