[package]
name = "gear-cli"
version = "0.1.0"
authors = ["Gear Technologies"]
edition = "2018"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[lib]
name = "gear_cli"
path = "src/lib.rs"

[[bin]]
name = "gear"
path = "src/main.rs"

[dependencies]
clap = { version = "3.2", features = ["derive"] }
scale-info = { version = "2.1.1", default-features = false, features = ["derive"] }
log = { version = "0.4.17" }

# Gear
runtime-primitives = { package = "gear-runtime-primitives", version = "0.1.0", default-features = false, path = "../../runtime/primitives" }
gear-runtime-test-cli = { path = "../../utils/gear-runtime-test-cli", optional = true }
service = { package = "gear-service", path = "../service", default-features = false }
pallet-gear-payment = { version = "0.1.0", path = "../../pallets/payment" }

# Gear Runtimes
gear-runtime = { path = "../../runtime/gear", optional = true }
vara-runtime = { path = "../../runtime/vara", optional = true }

# Substrate client
sc-cli = { version = "0.10.0-dev", git = "https://github.com/gear-tech/substrate.git", branch = "cl/fix-logging", features = [
	"wasmtime",
] }
sc-service = { version = "0.10.0-dev", git = "https://github.com/gear-tech/substrate.git", branch = "cl/fix-logging", features = [
	"wasmtime",
] }
sc-client-api = { version = "4.0.0-dev", git = "https://github.com/gear-tech/substrate.git", branch = "cl/fix-logging" }

# Substrate primitives
sp-core = { version = "6.0.0", git = "https://github.com/gear-tech/substrate.git", branch = "cl/fix-logging" }
sp-inherents = { version = "4.0.0-dev", git = "https://github.com/gear-tech/substrate.git", branch = "cl/fix-logging" }
sp-keyring = { version = "6.0.0", git = "https://github.com/gear-tech/substrate.git", branch = "cl/fix-logging" }
sp-runtime = { version = "6.0.0", git = "https://github.com/gear-tech/substrate.git", branch = "cl/fix-logging" }
sp-timestamp = { version = "4.0.0-dev", git = "https://github.com/gear-tech/substrate.git", branch = "cl/fix-logging" }

# Substrate other (benchmarking etc)
frame-system = { version = "4.0.0-dev", git = "https://github.com/gear-tech/substrate.git", branch = "cl/fix-logging" }
frame-benchmarking = { version = "4.0.0-dev", git = "https://github.com/gear-tech/substrate.git", branch = "cl/fix-logging" }
frame-benchmarking-cli = { version = "4.0.0-dev", git = "https://github.com/gear-tech/substrate.git", branch = "cl/fix-logging", optional = true }
try-runtime-cli = { version = "0.10.0-dev", git = "https://github.com/gear-tech/substrate.git", branch = "cl/fix-logging", optional = true }

# Program CLI
gear-program = { path = "../../program", features = [ "cli" ], optional = true }

[build-dependencies]
substrate-build-script-utils = { version = "3.0.0", git = "https://github.com/gear-tech/substrate.git", branch = "cl/fix-logging" }

[features]
default = ["gear-native", "vara-native", "lazy-pages", "program"]
gear-native = [
	"service/gear-native",
	"gear-runtime-test-cli?/gear-native",
	"gear-runtime",
	"gear-program/gear"
]
vara-native = [
	"service/vara-native",
	"gear-runtime-test-cli?/vara-native",
	"vara-runtime",
	"gear-program/vara"
]
lazy-pages = [
	"service/lazy-pages",
	"gear-runtime-test-cli?/lazy-pages",
	"vara-runtime?/lazy-pages",
	"gear-runtime?/lazy-pages",
	"gear-program/lazy-pages",
]
runtime-benchmarks = [
	"service/runtime-benchmarks",
	"frame-benchmarking-cli/runtime-benchmarks",
	"gear-program/runtime-benchmarks",
]
debug-mode = [
	"service/debug-mode",
	"gear-runtime?/debug-mode",
	"vara-runtime?/debug-mode",
	"gear-program/debug-mode",
]
try-runtime = [
	"service/try-runtime",
	"try-runtime-cli",
	"gear-program/try-runtime",
]
runtime-test = ["gear-runtime-test-cli"]
program = ["gear-program"]
