[package]
name = "gear-service"
version = "0.1.0"
authors = ["Gear Technologies"]
description = "Gear Node"
edition = "2018"
license = "GPL-3.0"
homepage = "https://gear-tech.io"
repository = "https://github.com/gear-tech/gear"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = { package = "parity-scale-codec", version = "3.1.2", features = ["derive"] }
futures = "0.3.25"
futures-timer = "3.0.1"
hex-literal = "0.3.4"
jsonrpsee = { version = "0.15.1", features = ["server"] }
log = "0.4.17"
serde = { version = "1.0.136", features = ["derive"] }

# Gear
pallet-gear-rpc = { path = "../../pallets/gear/rpc" }
pallet-gear-rpc-runtime-api = { path = "../../pallets/gear/rpc/runtime-api" }
runtime-primitives = { package = "gear-runtime-primitives", version = "0.1.0", path = "../../runtime/primitives" }
gear-runtime-interface = { path = "../../runtime-interface" }
authorship = { package = "gear-authorship", path = "../authorship" }

# Gear Runtimes
common = { package = "gear-common", path = "../../common" }
gear-runtime = { path = "../../runtime/gear", optional = true }
vara-runtime = { path = "../../runtime/vara", optional = true }

# Substrate Client
sc-block-builder = { version = "0.10.0-dev", git = "https://github.com/gear-tech/substrate.git", branch = "cl/fix-logging" }
sc-chain-spec = { version = "4.0.0-dev", git = "https://github.com/gear-tech/substrate.git", branch = "cl/fix-logging" }
sc-authority-discovery = { version = "0.10.0-dev", git = "https://github.com/gear-tech/substrate.git", branch = "cl/fix-logging" }
sc-executor = { version = "0.10.0-dev", git = "https://github.com/gear-tech/substrate.git", branch = "cl/fix-logging", features = [
	"wasmtime",
	"wasmer-sandbox",
	"wasmer-cache",
] }
sc-service = { version = "0.10.0-dev", git = "https://github.com/gear-tech/substrate.git", branch = "cl/fix-logging", features = [
	"wasmtime",
] }
sc-telemetry = { version = "4.0.0-dev", git = "https://github.com/gear-tech/substrate.git", branch = "cl/fix-logging" }
sc-keystore = { version = "4.0.0-dev", git = "https://github.com/gear-tech/substrate.git", branch = "cl/fix-logging" }
sc-network = { version = "0.10.0-dev", git = "https://github.com/gear-tech/substrate.git", branch = "cl/fix-logging" }
sc-network-common = { version = "0.10.0-dev", git = "https://github.com/gear-tech/substrate.git", branch = "cl/fix-logging" }
sc-transaction-pool = { version = "4.0.0-dev", git = "https://github.com/gear-tech/substrate.git", branch = "cl/fix-logging" }
sc-transaction-pool-api = { version = "4.0.0-dev", git = "https://github.com/gear-tech/substrate.git", branch = "cl/fix-logging" }
sc-rpc-api = { version = "0.10.0-dev", git = "https://github.com/gear-tech/substrate.git", branch = "cl/fix-logging" }
sc-consensus = { version = "0.10.0-dev", git = "https://github.com/gear-tech/substrate.git", branch = "cl/fix-logging" }
sc-consensus-epochs = { version = "0.10.0-dev", git = "https://github.com/gear-tech/substrate.git", branch = "cl/fix-logging" }
sc-consensus-babe = { version = "0.10.0-dev", git = "https://github.com/gear-tech/substrate.git", branch = "cl/fix-logging" }
sc-consensus-babe-rpc = { version = "0.10.0-dev", git = "https://github.com/gear-tech/substrate.git", branch = "cl/fix-logging" }
sc-finality-grandpa = { version = "0.10.0-dev", git = "https://github.com/gear-tech/substrate.git", branch = "cl/fix-logging" }
sc-finality-grandpa-rpc = { version = "0.10.0-dev", git = "https://github.com/gear-tech/substrate.git", branch = "cl/fix-logging" }
sc-client-api = { version = "4.0.0-dev", git = "https://github.com/gear-tech/substrate.git", branch = "cl/fix-logging" }
sc-rpc = { version = "4.0.0-dev", git = "https://github.com/gear-tech/substrate.git", branch = "cl/fix-logging" }
sc-rpc-spec-v2 = { version = "0.10.0-dev", git = "https://github.com/gear-tech/substrate.git", branch = "cl/fix-logging" }
sc-sync-state-rpc = { version = "0.10.0-dev", git = "https://github.com/gear-tech/substrate.git", branch = "cl/fix-logging" }
sc-sysinfo = { version = "6.0.0-dev", git = "https://github.com/gear-tech/substrate.git", branch = "cl/fix-logging" }

# Substrate Primitives
sp-core = { version = "6.0.0", git = "https://github.com/gear-tech/substrate.git", branch = "cl/fix-logging" }
sp-api = { version = "4.0.0-dev", git = "https://github.com/gear-tech/substrate.git", branch = "cl/fix-logging" }
sp-authorship = { version = "4.0.0-dev", git = "https://github.com/gear-tech/substrate.git", branch = "cl/fix-logging" }
sp-authority-discovery = { version = "4.0.0-dev", git = "https://github.com/gear-tech/substrate.git", branch = "cl/fix-logging" }
sp-consensus = { version = "0.10.0-dev", git = "https://github.com/gear-tech/substrate.git", branch = "cl/fix-logging" }
sp-consensus-babe = { version = "0.10.0-dev", git = "https://github.com/gear-tech/substrate.git", branch = "cl/fix-logging" }
sp-transaction-pool = { version = "4.0.0-dev", git = "https://github.com/gear-tech/substrate.git", branch = "cl/fix-logging" }
sp-finality-grandpa = { version = "4.0.0-dev", git = "https://github.com/gear-tech/substrate.git", branch = "cl/fix-logging" }
sp-runtime = { version = "6.0.0", git = "https://github.com/gear-tech/substrate.git", branch = "cl/fix-logging" }
sp-timestamp = { version = "4.0.0-dev", git = "https://github.com/gear-tech/substrate.git", branch = "cl/fix-logging" }
sp-blockchain = { version = "4.0.0-dev", git = "https://github.com/gear-tech/substrate.git", branch = "cl/fix-logging" }
sp-block-builder = { version = "4.0.0-dev", git = "https://github.com/gear-tech/substrate.git", branch = "cl/fix-logging" }
sp-keystore = { version = "0.12.0", git = "https://github.com/gear-tech/substrate.git", branch = "cl/fix-logging" }
sp-trie = { version = "6.0.0", git = "https://github.com/gear-tech/substrate.git", branch = "cl/fix-logging" }
sp-storage = { version = "6.0.0", git = "https://github.com/gear-tech/substrate.git", branch = "cl/fix-logging" }
sp-offchain = { version = "4.0.0-dev", git = "https://github.com/gear-tech/substrate.git", branch = "cl/fix-logging" }
sp-session = { version = "4.0.0-dev", git = "https://github.com/gear-tech/substrate.git", branch = "cl/fix-logging" }

# Frame Pallets
pallet-transaction-payment = { version = "4.0.0-dev", default-features = false, git = "https://github.com/gear-tech/substrate.git", branch = "cl/fix-logging" }
pallet-transaction-payment-rpc = { version = "4.0.0-dev", default-features = false, git = "https://github.com/gear-tech/substrate.git", branch = "cl/fix-logging" }
pallet-transaction-payment-rpc-runtime-api = { version = "4.0.0-dev", git = "https://github.com/gear-tech/substrate.git", branch = "cl/fix-logging" }

# Substrate Other
frame-benchmarking = { version = "4.0.0-dev", git = "https://github.com/gear-tech/substrate.git", branch = "cl/fix-logging" }
frame-benchmarking-cli = { version = "4.0.0-dev", git = "https://github.com/gear-tech/substrate.git", branch = "cl/fix-logging" }
substrate-frame-rpc-system = { version = "4.0.0-dev", git = "https://github.com/gear-tech/substrate.git", branch = "cl/fix-logging" }
frame-support = { version = "4.0.0-dev", git = "https://github.com/gear-tech/substrate.git", branch = "cl/fix-logging" }
frame-system = { version = "4.0.0-dev", git = "https://github.com/gear-tech/substrate.git", branch = "cl/fix-logging" }
frame-system-rpc-runtime-api = { version = "4.0.0-dev", git = "https://github.com/gear-tech/substrate.git", branch = "cl/fix-logging" }
substrate-state-trie-migration-rpc = { version = "4.0.0-dev", git = "https://github.com/gear-tech/substrate.git", branch = "cl/fix-logging" }
try-runtime-cli = { version = "0.10.0-dev", optional = true, git = "https://github.com/gear-tech/substrate.git", branch = "cl/fix-logging" }
prometheus-endpoint = { package = "substrate-prometheus-endpoint", version = "0.10.0-dev", git = "https://github.com/gear-tech/substrate.git", branch = "cl/fix-logging" }

[build-dependencies]
substrate-build-script-utils = { version = "3.0.0", git = "https://github.com/gear-tech/substrate.git", branch = "cl/fix-logging" }

[features]
gear-native = [
	"gear-runtime",
]
vara-native = [
	"vara-runtime",
]
lazy-pages = [
	"gear-runtime?/lazy-pages",
	"vara-runtime?/lazy-pages",
]
runtime-benchmarks = [
 	"frame-benchmarking/runtime-benchmarks",
 	"frame-benchmarking-cli/runtime-benchmarks",
	"gear-runtime?/runtime-benchmarks",
	"vara-runtime?/runtime-benchmarks",
]
debug-mode = [
	"gear-runtime?/debug-mode",
	"vara-runtime?/debug-mode",
]
try-runtime = [
	"gear-runtime?/try-runtime",
	"vara-runtime?/try-runtime",
	"try-runtime-cli",
]
